--- a/SouthAfricaAirBNB.ipynb
+++ b/SouthAfricaAirBNB.ipynb
@@ -2,15 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np \n",
+    "pd.set_option('display.max_columns', 300)\n",
+    "\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "plt.style.use('fivethirtyeight')   \n",
+    "import scipy.stats as stats\n",
+    "from statsmodels.formula.api import ols\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import seaborn as sns"
+    "from sklearn.dummy import DummyRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn import metrics\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import warnings\n",
+    "\n"
    ]
   },
   {
@@ -707,10 +721,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([' 57', ' 23', ' 4', ' 115', ' 71', ' 60', ' 54', ' 59', ' 77',\n",
+       "       ' 58', ' 113', ' 64', ' 107', ' 84', ' 63', ' 61', ' 74', ' 105',\n",
+       "       ' 15', ' 69', ' 62', ' 21', ' 55', ' 73', ' 100', ' 17', ' 16',\n",
+       "       ' 112', ' 1', ' 94', ' 5', ' 53', ' 67', ' 70', ' 103', ' 3',\n",
+       "       ' 14', ' 83', ' 85', ' 48', ' 86', ' 2', ' 56', ' 11', ' 32',\n",
+       "       ' 26', ' 109', ' 96', ' 49', ' 8', ' 27', ' 102', ' 6', ' 91',\n",
+       "       ' 9', ' 116', ' 43', ' 66', ' 68', ' 45', ' 19', ' 51', ' 20',\n",
+       "       ' 72', ' 46', ' 92', ' 22', ' 7', ' 50', ' 108', ' 10', ' 44',\n",
+       "       ' 82', ' 18', ' 93', ' 110', ' 75', ' 104', ' 41', ' 81', ' 12'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listing_df.neighbourhood.unique()"
+   ]
   },
   {
    "cell_type": "code",
@@ -719,18 +755,69 @@
    "outputs": [],
    "source": [
     "#city center wards df['city_center'] = wards == 77,54,115\n",
-    "City_Center = [74,77,54,57,59,58,60,47,46,48,49,52,51,53,56,\n",
-    "50,31,40,41,42,44,45]\n",
-    "Metro_North = []\n",
+    "listing_df['neighbourhood_group'] = listing_df['neighbourhood_group'].map(lambda x: if x == 74]\n",
+    "                                                                          \n",
+    "[74, 77, 54, 57, 59, 58, 60, 47, 46, 48, 49, 52, 51, 53, 56, 50, 31, 40, 41, 42, 44, 45]\n",
+    "Metro_North = [4, 5, 1, 27, 26, 30, 28]\n",
+    "Metro_South = [69, 71, 62, 73, 72, 63, 66, 65, 67, 80, 33, 38, 34, 37, 43] \n",
     "\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'name', 'host_id', 'host_name', 'neighbourhood_group',\n",
+       "       'neighbourhood', 'latitude', 'longitude', 'room_type', 'price',\n",
+       "       'minimum_nights', 'number_of_reviews', 'last_review',\n",
+       "       'reviews_per_month', 'calculated_host_listings_count',\n",
+       "       'availability_365'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listing_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.07596338298202121"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# baseline model\n",
     "\n",
+    "subset = ['neighbourhood', 'latitude', 'longitude', 'minimum_nights', 'number_of_reviews', 'reviews_per_month', 'availability_365']\n",
+    "x = listing_df[subset]\n",
+    "y = listing_df['price']\n",
     "\n",
-    "\n",
-    "\n",
-    "Metro_South = \n",
-    "\n",
-    "\n",
+    "dummy_regr = DummyRegressor(strategy = \"median\")\n",
+    "dummy_regr.fit(x, y)\n",
+    "#DummyRegressor()\n",
+    "dummy_regr.predict(x)\n",
+    "dummy_regr.score(x, y)\n",
     "\n"
    ]
   },
