updated crime stats

--- a/Final_Cape_Town_AirBNB.ipynb
+++ b/Final_Cape_Town_AirBNB.ipynb
@@ -51,7 +51,60 @@
    "outputs": [],
    "source": [
     "# Read in data \n",
+    "\n",
     "listing_df = pd.read_csv('listings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in crime statistics data to compliment neighbourhoods\n",
+    "\n",
+    "crime_df = pd.read_csv('SA_crime_ward.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop the nan row (was originally a double of column names not values)\n",
+    "\n",
+    "crime_df.drop(111, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_df['geo_code'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge df on geo code/neighbourhood for the crime stats\n",
+    "\n",
+    "listing_df = listing_df.merge(crime_df, left_on='neighbourhood', right_on = 'geo_code' ,how='left')\n",
+    "listing_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_df.head()"
    ]
   },
   {
@@ -71,7 +124,7 @@
     }
    ],
    "source": [
-    "listing_df.shape"
+    "listing_df.head()"
    ]
   },
   {
@@ -179,7 +232,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#minimum nights is 1125, which while this is true on airbnb, this place has not been booked at this minimum night and I believe it would scew the data. \n",
+    "\n",
+    "listing_df.drop(4957, inplace = True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -210,6 +267,42 @@
    "outputs": [],
    "source": [
     "listing_df.neighbourhood = listing_df.neighbourhood.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ward 112 impute mean from surounding wards (Ward 103, Ward 21, Ward 70 = 175)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ward 113  impute mean from surounding wards (Ward 107, Ward 1, Ward 4 = 237)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ward 115  impute mean from surounding wards (Ward 54, Ward 57, Ward 77, Ward 55 = 266)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ward 116  impute mean from surounding wards (Ward 87, Ward 18, Ward 35, Ward 76, Ward 92, Ward 79, Ward 78 = 265)"
    ]
   },
   {
