--- a/SouthAfricaAirBNB.ipynb
+++ b/SouthAfricaAirBNB.ipynb
@@ -1812,10 +1812,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 695,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>...</th>\n",
+       "      <th>total_10000 _rounded</th>\n",
+       "      <th>distance_cc</th>\n",
+       "      <th>distance_waterfront</th>\n",
+       "      <th>distance_wine</th>\n",
+       "      <th>distance_airport</th>\n",
+       "      <th>price_usd_log</th>\n",
+       "      <th>distance_cc_log</th>\n",
+       "      <th>availability_log</th>\n",
+       "      <th>availability_365_sin</th>\n",
+       "      <th>price_log</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2651</th>\n",
+       "      <td>8283732</td>\n",
+       "      <td>Mayfield</td>\n",
+       "      <td>43677989</td>\n",
+       "      <td>Belinda</td>\n",
+       "      <td>58</td>\n",
+       "      <td>-33.97105</td>\n",
+       "      <td>18.48694</td>\n",
+       "      <td>4998</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>4.810418</td>\n",
+       "      <td>6.018637</td>\n",
+       "      <td>21.648111</td>\n",
+       "      <td>4.810418</td>\n",
+       "      <td>5.861441</td>\n",
+       "      <td>1.570784</td>\n",
+       "      <td>-inf</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.516793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5932</th>\n",
+       "      <td>14371318</td>\n",
+       "      <td>Rockwell apartments</td>\n",
+       "      <td>41792387</td>\n",
+       "      <td>Rob And Claire</td>\n",
+       "      <td>115</td>\n",
+       "      <td>-33.91526</td>\n",
+       "      <td>18.41964</td>\n",
+       "      <td>2203</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.713461</td>\n",
+       "      <td>0.807137</td>\n",
+       "      <td>26.678797</td>\n",
+       "      <td>0.713461</td>\n",
+       "      <td>7.697575</td>\n",
+       "      <td>-0.337628</td>\n",
+       "      <td>5.899897</td>\n",
+       "      <td>0.544046</td>\n",
+       "      <td>7.697575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10664</th>\n",
+       "      <td>21604637</td>\n",
+       "      <td>Cape Holiday Home</td>\n",
+       "      <td>111882638</td>\n",
+       "      <td>Sally</td>\n",
+       "      <td>71</td>\n",
+       "      <td>-34.06030</td>\n",
+       "      <td>18.43453</td>\n",
+       "      <td>4946</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>9.374310</td>\n",
+       "      <td>10.856737</td>\n",
+       "      <td>23.418208</td>\n",
+       "      <td>9.374310</td>\n",
+       "      <td>5.850982</td>\n",
+       "      <td>2.237973</td>\n",
+       "      <td>5.572154</td>\n",
+       "      <td>-0.779447</td>\n",
+       "      <td>8.506334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10763</th>\n",
+       "      <td>21678695</td>\n",
+       "      <td>Upmarket Apartment in the buzz of Cape Town</td>\n",
+       "      <td>96551920</td>\n",
+       "      <td>Jeff</td>\n",
+       "      <td>115</td>\n",
+       "      <td>-33.92835</td>\n",
+       "      <td>18.41649</td>\n",
+       "      <td>3998</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.497158</td>\n",
+       "      <td>1.725450</td>\n",
+       "      <td>26.480630</td>\n",
+       "      <td>0.497158</td>\n",
+       "      <td>5.638197</td>\n",
+       "      <td>-0.698848</td>\n",
+       "      <td>-inf</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.293550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13845</th>\n",
+       "      <td>27892216</td>\n",
+       "      <td>Sunny spacious penthouse in Cape Town close to...</td>\n",
+       "      <td>62128248</td>\n",
+       "      <td>Aviva</td>\n",
+       "      <td>70</td>\n",
+       "      <td>-33.87580</td>\n",
+       "      <td>18.62888</td>\n",
+       "      <td>2508</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>12.223939</td>\n",
+       "      <td>12.105063</td>\n",
+       "      <td>18.483459</td>\n",
+       "      <td>12.223939</td>\n",
+       "      <td>7.827241</td>\n",
+       "      <td>2.503396</td>\n",
+       "      <td>5.880533</td>\n",
+       "      <td>-0.141090</td>\n",
+       "      <td>7.827241</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id                                               name    host_id  \\\n",
+       "2651    8283732                                           Mayfield   43677989   \n",
+       "5932   14371318                                Rockwell apartments   41792387   \n",
+       "10664  21604637                                  Cape Holiday Home  111882638   \n",
+       "10763  21678695        Upmarket Apartment in the buzz of Cape Town   96551920   \n",
+       "13845  27892216  Sunny spacious penthouse in Cape Town close to...   62128248   \n",
+       "\n",
+       "            host_name  neighbourhood  latitude  longitude  price  \\\n",
+       "2651          Belinda             58 -33.97105   18.48694   4998   \n",
+       "5932   Rob And Claire            115 -33.91526   18.41964   2203   \n",
+       "10664           Sally             71 -34.06030   18.43453   4946   \n",
+       "10763            Jeff            115 -33.92835   18.41649   3998   \n",
+       "13845           Aviva             70 -33.87580   18.62888   2508   \n",
+       "\n",
+       "       minimum_nights  number_of_reviews  ... total_10000 _rounded  \\\n",
+       "2651               11                  2  ...                150.0   \n",
+       "5932               11                  0  ...                  NaN   \n",
+       "10664              11                  0  ...                177.0   \n",
+       "10763              11                  0  ...                  NaN   \n",
+       "13845              11                  1  ...                173.0   \n",
+       "\n",
+       "       distance_cc  distance_waterfront  distance_wine  distance_airport  \\\n",
+       "2651      4.810418             6.018637      21.648111          4.810418   \n",
+       "5932      0.713461             0.807137      26.678797          0.713461   \n",
+       "10664     9.374310            10.856737      23.418208          9.374310   \n",
+       "10763     0.497158             1.725450      26.480630          0.497158   \n",
+       "13845    12.223939            12.105063      18.483459         12.223939   \n",
+       "\n",
+       "       price_usd_log  distance_cc_log  availability_log  availability_365_sin  \\\n",
+       "2651        5.861441         1.570784              -inf              0.000000   \n",
+       "5932        7.697575        -0.337628          5.899897              0.544046   \n",
+       "10664       5.850982         2.237973          5.572154             -0.779447   \n",
+       "10763       5.638197        -0.698848              -inf              0.000000   \n",
+       "13845       7.827241         2.503396          5.880533             -0.141090   \n",
+       "\n",
+       "      price_log  \n",
+       "2651   8.516793  \n",
+       "5932   7.697575  \n",
+       "10664  8.506334  \n",
+       "10763  8.293550  \n",
+       "13845  7.827241  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 695,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listing_df[listing_df['minimum_nights'] == 11]"
+   ]
   },
   {
    "cell_type": "code",
@@ -4062,7 +4285,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "contingency_table=pd.crosstab(listing_df[listing_df[\"minimum_nights\"]<4],listing_df[\"room_type_Entire home/apt\"])\n",
+    "print('contingency_table :-\\n',contingency_table)\n",
+    "\n",
+    "#Observed Values\n",
+    "Observed_Values = contingency_table.values \n",
+    "print(\"Observed Values :-\\n\",Observed_Values)\n",
+    "b=stats.chi2_contingency(contingency_table)\n",
+    "Expected_Values = b[3]\n",
+    "print(\"Expected Values :-\\n\",Expected_Values)\n",
+    "no_of_rows=len(contingency_table.iloc[0:2,0])\n",
+    "no_of_columns=len(contingency_table.iloc[0,0:2])\n",
+    "ddof=(no_of_rows-1)*(no_of_columns-1)\n",
+    "print(\"Degree of Freedom:-\",ddof)\n",
+    "alpha = 0.05\n",
+    "from scipy.stats import chi2\n",
+    "chi_square=sum([(o-e)**2./e for o,e in zip(Observed_Values,Expected_Values)])\n",
+    "chi_square_statistic=chi_square[0]+chi_square[1]\n",
+    "print(\"chi-square statistic:-\",chi_square_statistic)\n",
+    "critical_value=chi2.ppf(q=1-alpha,df=ddof)\n",
+    "print('critical_value:',critical_value)\n",
+    "\n",
+    "#p-value\n",
+    "p_value=1-chi2.cdf(x=chi_square_statistic,df=ddof)\n",
+    "print('p-value:',p_value)\n",
+    "print('Significance level: ',alpha)\n",
+    "print('Degree of Freedom: ',ddof)\n",
+    "print('chi-square statistic:',chi_square_statistic)\n",
+    "print('critical_value:',critical_value)\n",
+    "print('p-value:',p_value)\n",
+    "if chi_square_statistic>=critical_value:\n",
+    "    print(\"Reject H0,There is a relationship between 2 categorical variables, chi_sq_statistic\")\n",
+    "else:\n",
+    "    print(\"Retain H0,There is no relationship between 2 categorical variables\")\n",
+    "    \n",
+    "if p_value<=alpha:\n",
+    "    print(\"Reject H0,There is a relationship between 2 categorical variables\")\n",
+    "else:\n",
+    "    print(\"Retain H0,There is no relationship between 2 categorical variables, p_value\")"
+   ]
   }
  ],
  "metadata": {
